# python-xmlsec

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  Sms102625  build.py  build_libs_xmlsec.py  mypy.ini  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  setupinfo.py  test.py  xmlsec.pxd  xmlsec.pyx  xmlsec_extra.py  xmlsec_setupinfo.py
.github/scripts/: manylinux_build_and_test.sh
.github/workflows/: cache_libs.yml  ci.yml  install_test.yml  linuxbrew.yml  lxml.yml  macosx.yml  manylinux.yml  manylinux2010.yml  opensuse-tumbleweed.yml  sdist.yml  wheels.yml
build_support/: build_ext.py  lib_xmlsec_dependency_builder.py  network.py  releases.py  static_build.py
doc/: Makefile  README.md
doc/source/: api.rst  conf.py  examples.rst  index.rst  install.rst  requirements.txt  sphinx-pr-6916.diff
doc/source/examples/: decrypt.py  enc1-doc.xml  enc1-res.xml  encrypt.py  rsacert.pem  sign.py  sign1-res.xml  sign_binary.py  verify.py  verify_binary.py
doc/source/modules/: constants.rst  template.rst  tree.rst  xmlsec.rst
libs/: README.md
src/: common.h  constants.c  debug.h  ds.c  enc.c  exception.c  exception.h  key.c  key.h  keys.c  lxml.c  lxml.h  main.c  platform.h  template.c  tree.c  utils.c  utils.h  xmlsec.h  xmlsec.pxd  xmlsec.pyx
src/xmlsec/: __init__.py  __init__.pyi  constants.pxd  constants.pyi  constants.pyx  ds.pxd  ds.pyx  enc.pxd  enc.pyx  error.py  key.pxd  key.pyx  meta.py  ssl.pxd  template.pxd  template.py  template.pyi  template.pyx  tree.pxd  tree.pyi  tree.pyx  utils.pxd  utils.pyx
tests/: base.py  conftest.py  softhsm_setup.py  test_constants.py  test_doc_examples.py  test_ds.py  test_enc.py  test_keys.py  test_main.py  test_pkcs11.py  test_templates.py  test_tree.py  test_type_stubs.py  test_xmlsec.py
tests/data/: enc-bad-in.xml  enc1-in.xml  enc2-in.xml  enc2-out.xml  enc3-in.xml  enc3-out.xml  enc_template.xml  sign1-in.xml  sign2-in.xml  sign2-out.xml  sign3-in.xml  sign3-out.xml  sign4-in.xml  sign4-out.xml  sign5-out-xmlsec_1_2_36_to_37.xml  sign5-out.xml  sign_template.xml
tests/examples/: base.py  enc1-res.xml  enc2-res.xml  sign5-doc.xml  test_decrypt.py  test_encrypt.py  test_sign.py  test_templates.py  test_verify.py
tests/typesafe/: test_constants.yml  test_xmlsec.yml
tests/xmlsec/: test_sign.py  test_templates.py  test_verify.py
typeshed/lxml/: etree.pyi
workflow-backkups/: manylinux.yml
