[tool.mypy]
files = ['src']
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
strict_optional = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
no_implicit_reexport = true
show_error_codes = true

[tool.black]
line_length = 130
skip-string-normalization = true
target_version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = 'black'
known_first_party = ['xmlsec']
known_third_party = ['lxml', 'pytest', '_pytest', 'hypothesis']

[build-system]
requires = ['setuptools>=42', 'wheel', 'setuptools_scm[toml]>=3.4', "pkgconfig>=1.5.1", "lxml>=5.0.0"]

[tool.cibuildwheel]
build-verbosity = 1
build-frontend = "build"
skip = ["pp*", "*-musllinux_i686"]
test-command = "pytest -v --color=yes {package}/tests"
before-test = "pip install -r requirements-test.txt"
test-skip = "*-macosx_arm64"

[tool.cibuildwheel.environment]
PYXMLSEC_LIBXML2_VERSION = "2.12.3"
PYXMLSEC_LIBXSLT_VERSION = "1.1.39"
PYXMLSEC_STATIC_DEPS = "true"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64", "i686"]
environment-pass = [
    "PYXMLSEC_LIBXML2_VERSION",
    "PYXMLSEC_LIBXSLT_VERSION",
    "PYXMLSEC_STATIC_DEPS"
]

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
