[metadata]
description-file = README.rst

[bdist_rpm]
release = 1
build-requires = pkg-config xmlsec1-devel libxml2-devel xmlsec1-openssl-devel
group = Development/Libraries
requires = xmlsec1 xmlsec1-openssl

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[upload_docs]
upload-dir = doc/build/html
