[metadata]
description_file = README.rst

[bdist_rpm]
release = 1
build_requires = pkg-config xmlsec1-devel libxml2-devel xmlsec1-openssl-devel
group = Development/Libraries
requires = xmlsec1 xmlsec1-openssl

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[upload_docs]
upload_dir = doc/build/html

[flake8]
per-file-ignores =
  *.pyi: E301, E302, E305, E501, E701, F401, F822
  doc/source/conf.py: D1
  doc/source/examples/*.py: D1, E501
  tests/*.py: D1
exclude = .venv*,.git,*_pb2.pyi,build,dist,libs,.eggs,.direnv*
max-line-length = 130
